fixed edit position, wrapped with #subtitle div

--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -29,6 +29,8 @@
 #title { padding-left: 40px; }
 #title a { text-decoration: none; }
 
+#subtitle { padding-left: 40px; }
+
 form { padding-left: 40px; }
 
 body {
